dominantInterval update